- Remove vagrant - Remove not hot dev-server - create folder /utils with with web pack custom files - change readme

--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "react-starter",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "",
   "main": "app/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev-server": "webpack-dev-server --config webpack-dev-server.config.js --progress --colors --port 2992 --inline",
-    "hot-dev-server": "webpack-dev-server --config webpack-hot-dev-server.config.js --hot --progress --colors --port 2992 --inline",
+    "dev-server": "webpack-dev-server --config webpack-dev-server.config.js --hot --progress --colors --port 2992 --inline",
     "build": "webpack --config webpack-production.config.js --progress --profile --colors",
     "start-dev": "node lib/server-development",
     "start": "node lib/server-production"
@@ -18,7 +17,11 @@
     "boilerplate",
     "hot"
   ],
-  "author": "Tobias Koppers @sokra",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/cjtoribio/react-flux-template.git"
+  },
+  "author": "Carlos Toribio @cjtoribio",
   "license": "MIT",
   "dependencies": {
     "async": "^1.2.0",
@@ -35,10 +38,12 @@
     "less-loader": "^2.0.0",
     "markdown-loader": "^0.1.2",
     "null-loader": "^0.1.0",
-    "react": "^0.13.1",
+    "react": "^0.14.3",
     "react-hot-loader": "^1.0.0",
     "react-proxy-loader": "^0.3.1",
+    "react-redux": "^4.0.5",
     "react-router": "^0.13.2",
+    "redux": "^3.0.5",
     "stats-webpack-plugin": "^0.1.2",
     "style-loader": "^0.12.0",
     "superagent": "^1.1.0",
@@ -50,6 +55,7 @@
   "devDependencies": {
     "babel-eslint": "^3.0.1",
     "eslint": "^0.22.0",
-    "eslint-plugin-react": "^2.2.0"
+    "eslint-plugin-react": "^2.2.0",
+    "redux-devtools": "^3.0.1"
   }
 }
