--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/cjtoribio/react-flux-template.git"
+    "url": "https://github.com/cjtoribio/react-flux-template.git"
   },
   "author": "Carlos Toribio @cjtoribio",
   "license": "MIT",
