change package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-starter",
+  "name": "react-flux-template",
   "version": "0.1.0",
   "description": "",
   "main": "app/app.js",
